<resources>
    <string name="app_name">CodingTest1</string>
    <string name="name">Name</string>
    <string name="number">07777777</string>
    <string name="description">family</string>
    <string name="add_item_button">Add Item Button</string>
    <string name="add_the_contact">Add the contact</string>
    <string name="mobile_no">Mobile No</string>
    <string name="Description">Description</string>
    <string name="todo">TODO</string>
    <string name="adding_contact">Adding contact</string>
    <string name="fill_all_fields">Please fill in all fields</string>
</resources>